Fixes 'show-less-amenities' jumping screen

--- a/ares/styles/styles.css
+++ b/ares/styles/styles.css
@@ -1364,7 +1364,6 @@ legend {
 .SinglePropDetail #show-more-or-less {
     cursor: pointer;
     text-decoration: underline;
-    padding: 10px;
 }
 
 .SinglePropDetail .rowOne {
